Popravljanje gui sa sonar qube